AM_CPPFLAGS = -I$(top_srcdir)/include
bin_PROGRAMS = hfcxx
hfcxx_SOURCES = vector.cpp atom.cpp gto.cpp cgf.cpp \
func.cpp overlap.cpp kinetic.cpp gamma.cpp \
nuclear.cpp repulsion.cpp hf.cpp molecule.cpp \
canorg.cpp matfunc.cpp clock.cpp \
version.cpp basis.cpp strfunc.cpp readfile.cpp \
output.cpp eispack.cpp eigsym.cpp main.cpp \
../include/atom.h ../include/clock.h ../include/func.h \
../include/kinetic.h \
../include/nuclear.h ../include/repulsion.h ../include/basis.h ../include/eigsym.h \
../include/gamma.h ../include/matfunc.h ../include/output.h ../include/strfunc.h \
../include/canorg.h ../include/eispack.h ../include/gto.h ../include/matrix.h \
../include/overlap.h ../include/vector.h ../include/cgf.h ../include/factorial.h \
../include/hf.h ../include/molecule.h ../include/readfile.h ../include/version.h \
basis-sto3g.cpp basis-sto6g.cpp
