AM_CPPFLAGS = -I$(top_srcdir)/include
bin_PROGRAMS = hfcxx
hfcxx_SOURCES = atom.cpp basis.cpp clock.cpp \
canorg.cpp cgf.cpp eigsym.cpp eispack.cpp \
func.cpp gto.cpp gamma.cpp hf.cpp \
kinetic.cpp main.cpp matfunc.cpp molecule.cpp \
nuclear.cpp output.cpp overlap.cpp readfile.cpp \
repulsion.cpp strfunc.cpp vector.cpp version.cpp \
../include/atom.h ../include/clock.h ../include/func.h \
../include/kinetic.h ../include/nuclear.h ../include/repulsion.h \
../include/basis.h ../include/eigsym.h ../include/gamma.h \
../include/matfunc.h ../include/output.h ../include/strfunc.h \
../include/canorg.h ../include/eispack.h ../include/gto.h ../include/matrix.h \
../include/overlap.h ../include/vector.h ../include/cgf.h ../include/factorial.h \
../include/hf.h ../include/molecule.h ../include/readfile.h ../include/version.h \
basis-sto3g.cpp basis-sto6g.cpp
